--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     </ul>
 </nav>
 
+<h1>Star Wars</h1>
+<article>
+    <section>
+        Sir, if I may venture an opinion... I'm not really interested in your opinion, Threepio. There's something out there. Where? Outside, in the cave. There it is. Listen! Listen! I'm going out there. Are you crazy?! I just got this bucket back together. I'm not going to let something tear it apart. Then I'm going with you. I think it might be better if I stay here and guard the ship. Oh, no.
+    </section>
+    <section>
+        What did you have in mind for your next move? Well, if they follow standard Imperial procedure, they'll dump their garbage before they go to light-speed, then we just float away. With the rest of the garbage. Then what? Then we've got to find a safe port somewhere around here. Got any ideas? No. Where are we? The Anoat system. Anoat system. There's not much there. No.
+    </section>
+    <section>
+        Yes, that's it. Dagobah. No, I'm not going to change my mind about this. I'm not picking up any cities or technology. Massive life-form readings, though. There's something alive down there... Yes, I'm sure it's perfectly safe for droids. I know, I know! All the scopes are dead. I can't see a thing! Just hang on, I'm going to start the landing cycle... No, Artoo, you stay put. I'll have a look around.
+    </section>
+    <section>
+        Put Captain Solo in the cargo hold. Artoo! Artoo! Where have you been? Turn around, you wooly...! Hurry, hurry! We're trying to save Han from the bounty hunter! Well, at least your still in one piece! Look what happened to me! Oh, no! Chewie, they're behind you!
+    </section>
+    <section>
+        Echo Three to Echo Seven. Han, old buddy, do you read me? Loud and clear, kid. What's up? Well, I finished my circle. I don't pick up any life readings. There isn't enough life on this ice cube to fill a space cruiser. The sensors are placed. I'm going back. Right. I'll see you shortly. There's a meteorite that hit the ground near here. I want to check it out. It won't take long. Hey, steady girl. What's the matter? You smell something?
+    </section>
+</article>
+
+<footer>@2020 by me</footer>
+
   <script src="main.js"></script>  
 </body>
 </html>
