add people cards

--- a/people.html
+++ b/people.html
@@ -18,5 +18,19 @@
         </ul>
     </nav>
     <!-- NAVIGATION END -->
+<h1>People of Star Wars</h1>
+
+<div class="people-card">
+    <img src="https://vignette.wikia.nocookie.net/starwars/images/d/d8/Mara_insidercover.jpg/revision/latest/scale-to-width-down/312?cb=20070701201021" alt="Mara Jade">
+    <h2>Mara Jade</h2>
+</div>
+<div class="people-card">
+    <img src="https://vignette.wikia.nocookie.net/starwars/images/3/3f/AnakinSolo_EA.jpg/revision/latest/scale-to-width-down/499?cb=20090820054939" alt="Anakin Solo">
+    <h2>Anakin Solo</h2>
+</div>
+<div class="people-card">
+    <img src="https://preview.redd.it/fhti9hrj1bjy.jpg?width=640&crop=smart&auto=webp&s=099074bcf8bce2246140c77716b3c8abeb444e00" alt="Darth Revan">
+    <h2>Darth Revan</h2>
+</div>
 </body>
 </html>
